// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`JobSearchSitesPage Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="job-search-sites-title"
      >
        Job Search Sites
      </h1>
      <a
        href="/job-search-sites/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="job-search-sites-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm text-center py-5"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted mb-4"
          data-qa="job-search-sites-empty-state"
        >
          No job search sites found.
        </p>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            6:00:00 AM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JobSearchSitesPage Snapshot Tests > matches snapshot for job search sites list 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="job-search-sites-title"
      >
        Job Search Sites
      </h1>
      <a
        href="/job-search-sites/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="job-search-sites-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover mb-0"
          data-qa="job-search-sites-table"
        >
          <thead
            class="table-light"
          >
            <tr>
              <th>
                Name
              </th>
              <th
                class="d-none d-md-table-cell"
              >
                URL
              </th>
              <th>
                Actions
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  href="/job-search-sites/1"
                >
                  LinkedIn
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <a
                    class="text-muted small text-break"
                    href="https://linkedin.com/jobs"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://linkedin.com/jobs
                  </a>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
              >
                <a
                  class="text-break"
                  href="https://linkedin.com/jobs"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://linkedin.com/jobs
                </a>
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    href="/job-search-sites/1/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  href="/job-search-sites/2"
                >
                  Indeed
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <a
                    class="text-muted small text-break"
                    href="https://indeed.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    https://indeed.com
                  </a>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
              >
                <a
                  class="text-break"
                  href="https://indeed.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  https://indeed.com
                </a>
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    href="/job-search-sites/2/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            6:00:00 AM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JobSearchSitesPage Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="d-flex flex-column align-items-center justify-content-center p-5"
    data-qa="loading"
  >
    <div
      class="spinner-border text-primary mb-3"
      data-qa="loading-spinner"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    <p
      class="text-muted"
      data-qa="loading-message"
    >
      Loading job search sites...
    </p>
  </div>
</div>
`;
